Revision history for Perl extension Shlomif::NavMenu.

1.0501    Sun Nov 14 12:11:19 IST 2010
    - Now generating the Makefile.PL from the Build.PL using 
    create_makefile_pl (less error-prone).

1.0500    Fri Nov 12 20:43:08 IST 2010
    - Convert from Class::Accessor to Class::XSAccessor for extra speed.
    - Add the tag-release.pl file.

1.0400    Wed Dec  9 11:44:05 IST 2009
    - Got rid of the dependency on Error.pm.
    - moved the HTML/ directory with the test scripts-support code from 
    the root of the distribution to unde t/lib .

1.0302    Thu Jun 25 16:48:42 IDT 2009
    - Fixed some broken links and other inaccuracies in the POD of
    lib/HTML/Widgets/NavMenu.pm .

1.0301    Tue Jun 23 23:01:54 IDT 2009
    - Changed the 'license' in Build.PL from "bsd" to the more accurate
    "mit".
    - Added keywords and links to the META.yml.

1.0300    Sun Jun 14 13:57:09 IDT 2009
    - Refactoring: Made HTML::Widgets::NavMenu::Object a sub-class of 
    Class::Accessor to remove many "use base" calls to it.
    - In progress - converting a flat %args hash (splatted into the @_)
    into a single $args hash-ref.
    - Removed a use lib "." from HTML::Widgets::NavMenu - it's a leftover
    statement that could be a subtle bug.
    - Refactoring: converted direct $self->{'field'} accesses to
    accessors. (from all the classes).
    - Fixed a bug with the HeaderRole where an empty <ul> was created.

1.0201    Fri Mar 28 17:46:59 IDT 2008
    - Fixed a case where a non-capturing expand in a node inside a
    capturing expand caused the upper node to be non-capturing too.

1.0200    Sun Mar 23 21:53:37 IST 2008
    - Removed trailing whitespace from "# TEST" lines - this can confuse
    early versions of Test-Count
    - Fixed a "# TEST" instead of a "# TESTbr" line that confused Test-Count.
    - Added the no_leading_dot option with a test.

1.0100    Fri Feb  8 19:19:09 IST 2008
    - Fixed a bug in HTML::Widgets::NavMenu::Url: